// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots checked false 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots checked true 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-3p558u=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots click large toggles 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots click small toggles 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-2sz0ak=""
      >
        <div
          data-css-44oays=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots color blue 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-3p558u=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots color green 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-1ad2n5h=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots color orange 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-3p558u=""
      >
        <div
          data-css-1a0fvsw=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots disabled false 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots disabled true 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-1yf296h=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots error false 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots error true 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Clickable in error state
    </label>
  </button>
</div>
`;

exports[`Storyshots error true w/ disabled 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-1yf296h=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Such errors
    </label>
  </button>
</div>
`;

exports[`Storyshots label large left 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-1u14hec=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-qisca0=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label large right 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label small left 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-1u14hec=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-2sz0ak=""
      >
        <div
          data-css-44oays=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-kccklm=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label small right 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-2sz0ak=""
      >
        <div
          data-css-44oays=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-yktx6h=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-rao1gl=""
      >
        <div
          data-css-1o90whm=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-on3oux=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-1so76ss=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-2sz0ak=""
      >
        <div
          data-css-44oays=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-yktx6h=""
    >
      Click me
    </label>
  </button>
</div>
`;
